--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -3,8 +3,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  font-family: 'EB Garamond', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./marble.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
@@ -15,4 +19,8 @@ code {
 .multi-carousel-item {
   width: 33.3333%;
   margin-left: 0px;
+}
+
+.form-group {
+  color:black;
 }
