--- a/ghi/src/style/profilepage.css
+++ b/ghi/src/style/profilepage.css
@@ -5,11 +5,6 @@
   height: 75vh;
 }
 
-.carousel-container {
-  width: 75%;
-  height: 400px;
-}
-
 .carousel-inner {
   height: 100%;
   display: flex;
@@ -22,6 +17,17 @@
   display: flex;
   justify-content: center;
   width: 75%;
+  height: 400px;
+}
+
+.card-color {
+  background-color: #8e8b8b;
+}
+
+.image-container {
+  height: 450px;
+  width: 450px;
+  overflow: hidden;
 }
 
 .custom-carousel .carousel-item {
@@ -40,10 +46,6 @@
   display: flex;
   justify-content: space-between;
   border-radius: 20px;
-}
-
-.carousel-container {
-  width: 75%;
 }
 
 .profile-indicator {
