--- a/ghi/src/style/searchpage.css
+++ b/ghi/src/style/searchpage.css
@@ -63,7 +63,7 @@
   }
 
   .surprise-section,
-  .card {
+  .card-search {
     max-width: 1em;
     margin: 0 auto;
     max-width: 75vh;
@@ -100,7 +100,7 @@
     margin-left: 1rem;
   }
 
-  .card {
+  .card-search {
     width: 300px;
     height: 300px;
     display: flex;
