main page adjustment

--- a/ghi/src/style/mainpage.css
+++ b/ghi/src/style/mainpage.css
@@ -11,21 +11,21 @@ li {
 
 .content-main {
     position: absolute;
-    top: 110px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
     width: 100%;
 }
 
 .title-main {
     font-size: 140px;
-    color: #fff;
+    /* color: #fff; */
     font-weight: 600;
     transition: 0.5s;
 }
 
-.title-main:hover {
+.title-main {
     -webkit-text-stroke: 1px #fff;
     color: transparent;
 }
