--- a/ghi/src/style/aboutpage.css
+++ b/ghi/src/style/aboutpage.css
@@ -7,6 +7,7 @@
     background-color: #f9f9f9;
     padding: 20px;
     text-align: center;
+    margin-top: 30px;
 }
 
 .header-main h1 {
@@ -24,4 +25,33 @@
 .header-main>* {
     max-width: 800px;
     margin: 0 auto;
+}
+
+.contact-title {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.contact-details {
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+.contact-link {
+    display: inline-block;
+    margin: 5px;
+    padding: 10px 15px;
+    background-color: #0077B5;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.contact-link:hover {
+    background-color: #005682;
+    color: white;
+}
+
+.contact-container {
+    padding-top: 20px;
 }
